--- a/css/styles.css
+++ b/css/styles.css
@@ -56,7 +56,6 @@ nav .container >*{
     color: white;
     background-color: rgb(77 105 108);
     position: absolute;
-    margin: 100px -400px;
     padding: 30px 20px 30px 200px;
     z-index: 2;
 }
@@ -67,9 +66,10 @@ nav .container >*{
 .down-arrow {
     color: #e3eeeb;
     background-color: rgb(77 105 108);
-    padding: 20px 45px;
+    left: 1097px;
+    top: 493px;
     z-index: 2;
-    margin: 420px 0 0px 850px;
+    padding: 20px 45px;
     position: absolute;
     font-size: 30px;
 }
@@ -78,7 +78,8 @@ nav .container >*{
     z-index: -1;
     padding: 50px 50px;
     border: 3px solid #4f6d77;
-    margin: 459px 0 0 -30px;
+    top: 488px;
+    right: 1128px;
 }
 img{
     width: 100%;
@@ -103,8 +104,6 @@ section.benefits {
 }
 .benifits-head {
     display: flex;
-    grid-column-start: 1;
-    grid-column-end: -1;
     gap: 2rem;
 }
 .benifits-head h1 {
@@ -122,18 +121,21 @@ section.benefits {
 }
 .part {
     display: grid;
-    grid-template-columns: 1fr 5fr;
-    grid-template-rows: 1fr 1fr;
+    grid-template-columns: repeat(2,auto);
+    grid-template-rows: repeat(2,auto);
+    row-gap: 2rem;
+    column-gap: 1rem;
 }
 .benefit-part {
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(3,auto);
+    grid-template-rows: auto;
     gap: 20px;
 }
 .experience .container .exp-grid {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 3fr 2fr 2fr 2fr 1fr;
-    align-content: center;
+    grid-template-columns: repeat(3,auto);
+    grid-template-rows: repeat(4,auto);
 }
 .experience .container {
     display: grid;
@@ -146,9 +148,8 @@ section.benefits {
 }
 .experience h1, .definition {
     grid-column: span 3;
-    align-self: center;
 }
-.num {
+.number .num {
     color: rgb(98, 145, 155);
     font-size: 3rem;
     font-weight: bolder;
@@ -156,16 +157,17 @@ section.benefits {
     align-self: end;
 }
 .num-def {
-    width: 15px;
+    width: 80px;
     line-height: 25px;
 }
 .btn {
+    grid-column: span 3;
+    position: relative;
     display: flex;
-    grid-column: span 2;
 }
 .button1 {
     padding: 0 30px;
-    position: relative;
+    margin: 17px 0;
     background-color: white;
     color: black;
     border: 2px solid #080a08;
@@ -173,7 +175,8 @@ section.benefits {
 .arrow {
     position: absolute;
     width: 150px;
-    margin: 2px 0 0 79px;
+    top: 28px;
+    left: 70px;
 }
 .btn .line {
     width: 75px;
@@ -190,10 +193,11 @@ section.process {
 }
 .process-detail {
     display: grid;
-    grid-template-columns: 1fr 6fr;
-    grid-template-rows: 4fr 1fr 2fr 1fr 2fr 1fr 2fr;
+    grid-template-columns: repeat(2,auto);
+    grid-template-rows: repeat(7,auto);
     align-content: center;
-    gap: 1rem;
+    column-gap: 1rem;
+    row-gap: 2rem;
 }
 .process .container {
     display: grid;
@@ -203,13 +207,14 @@ section.process {
 }
 .process h1 {
     width: 395px;
+    margin-bottom: 50px;
     grid-column: span 2;
 }
 .product-img{
     grid-row: span 7;
     justify-self: end;
 }
-.vl {
+.vertical-line{
     border-left: 2px solid grey;
     margin-left: 25px;
 }
@@ -232,6 +237,9 @@ section.process {
     display: flex;
     justify-content: space-between;
 }
+.review-grid >* {
+    padding: 10px;
+}
 .review-flex1 h1{
     flex-basis: 400px;
 }
@@ -251,12 +259,12 @@ section.process {
     color: rgb(64, 74, 75);
 }
 .review-grid .quote {
-    font-size: 36px;
+    font-size: 50px;
 }
 .review-grid {
     display: grid;
-    grid-template-columns: 1fr 4fr;
-    grid-template-rows: 2fr 4fr 4fr 2fr;
+    grid-template-rows: repeat(4,auto);
+    grid-template-columns: auto;
     background-color: rgb(85, 112, 118);
 }
 .review-grid > * {
@@ -274,7 +282,8 @@ section.process {
 }
 .name {
     display: flex;
-    flex-direction: column;
+    flex-basis: 55px;
+    column-gap: 20px;
 }
 .name p{
     color: #ffffff;
@@ -296,9 +305,10 @@ section.process {
 .about .container p {
     padding-bottom: 80px;
 }
-form {
+.form {
     z-index: 2;
-    position: absolute;
+    position: relative;
+    top: 16px;
 }
 input{
     width: 100%;
@@ -311,7 +321,12 @@ input{
     color: #ffffff;
     position: absolute;
     z-index: 2;
+    border-style: none;
+    padding: 10px 55px;
+    top: 6px;
+    right: 10px;
 }
+
 footer {
     background-color: rgb(77 105 108);
     position: relative;
@@ -324,29 +339,32 @@ footer .container{
     background-color:rgb(77 105 108);
     padding: 80px 0;
 }
-.brand-detail{
-    grid-row: span 5;
+.brand-detail p{
     width: 300px;
 }
 .feedback{
     grid-row: span 2;
     
 }
-footer .container p{
-    color: #dbd3d3;
-    font-size: 15px;
-}
 .feedback-icon{
     display: flex;
     margin-top: 30px;
 }
-footer .container h4 {
+.footer-part p{
+    color: #dbd3d3;
+    font-size: 15px;
+}
+
+.footer-part h4 {
     margin-bottom: 20px;
     font-size: 20px;
 }
 svg{
     color: #ffffff;
     flex-basis: 50px;
+}
+.number{
+    color: white;
 }
 @media  (max-width:320px) {
     section.benefits {
@@ -355,8 +373,11 @@ svg{
     .benefits .container {
         row-gap: 50px;
     }
+    .experience h1, .definition {
+        padding: 20px 0;
+    }
     .process h1 {
-        width: 300px;
+        width: 288px;
     }
     .about .container h1 {
         width: 230px;
@@ -364,9 +385,6 @@ svg{
     .process .container {
         display: flex;
         flex-direction: column;
-    }
-    .process-detail {
-        grid-template-rows: 2fr 1fr 2fr 1fr 2fr 1fr 2fr;
     }
     section.process {
         margin: 100px 0;
@@ -379,18 +397,19 @@ svg{
     }
     .arrow {
         width: 120px;
-        margin: 13px 0 0 79px;
     }
-    form {
+    .form {
         width: 300px;
-        margin: 224px 0 0 0;
     }
     .subscribe {
-        padding: 13px 20px;
-        margin: 228px 0 0 190px;
+        padding: 12px 20px;
     }
     .product-img {
         margin-top: 40px;
+    }
+    .button1 {
+        padding: 20px 30px;
+        margin: 17px 0;
     }
 }
 @media (min-width:321px) and (max-width:425px){
@@ -417,9 +436,6 @@ svg{
         display: flex;
         flex-direction: column;
     }
-    .process-detail {
-        grid-template-rows: 2fr 1fr 2fr 1fr 2fr 1fr 2fr;
-    }
     .product-img {
         margin-top: 40px;
     }
@@ -429,16 +445,18 @@ svg{
     .review-flex1 {
         margin-bottom: 30px;
     }
-    form {
+    .form {
         width: 300px;
-        margin: 224px 0 0 0;
     }
     .about .container h1 {
         flex-basis: 100px;
     }
     .subscribe {
-        padding: 13px 20px;
-        margin: 228px 0 0 190px;
+        padding: 12px 20px;
+    }
+    .button1 {
+        padding: 20px 30px;
+        margin: 17px 0;
     }
 }
 @media (max-width:426px) {
@@ -446,15 +464,15 @@ svg{
         margin: 0 16px;
     }
     h1{
-        font-size: 23px;
+        font-size: 25px;
         line-height: 40px;
     }
     h3 {
-        font-size: 18px;
+        font-size: 20px;
         align-self: center;
     }
-    p{
-        font-size: 15px;
+    p {
+        font-size: 16px;
     }
     .review-flex {
         display: flex;
@@ -465,10 +483,6 @@ svg{
         display: flex;
         flex-direction: column;
        }
-    .benefits .container {
-        grid-template-columns: 1fr 5fr 1fr 5fr 1fr 5fr;
-        grid-template-rows: 3fr 1fr 4fr;
-    }
     .benefits .icon {
         font-size: 35px;
         margin-top: 20px;
@@ -486,15 +500,19 @@ svg{
         margin: -13px 0 0 101px;
     }
     .benefit-part {
+        display: flex;
         flex-direction: column;
-    } 
+    }
     .arrow {
         width: 120px;
-        margin: 6px 0 0 79px;
     }
     footer .container {
         display: flex;
         flex-direction: column;
+    }
+    .button1 {
+        padding: 20px 30px;
+        margin: 17px 0;
     }
 }
 @media( (min-width:425px) and (max-width:768px) ){
@@ -525,16 +543,13 @@ svg{
         width: 300px;
     }
     .process-detail {
-        grid-template-rows: 3fr 1fr 2fr 1fr 2fr 1fr 2fr;
+        row-gap: 1rem;
     }
     .process h1 {
         width: 313px;
     }
     .exp-img {
         height: 400px;
-    }
-    .part {
-        grid-template-rows: 2fr 3fr;
     }
     .product-img {
         height: 400px;
@@ -564,13 +579,13 @@ svg{
         display: flex;
         flex-direction: column;
     }
-    form {
+    .form {
         width: 420px;
-        margin: 275px 0 0 0;
     }
     .subscribe {
-        padding: 13px 20px;
-        margin: 278px 0 0 305px;
+        padding: 12px 20px;
+        top: 5px;
+        right: 4px;
     }
     section.review {
         margin-top: 60px;
@@ -591,6 +606,10 @@ svg{
     .nav-icon .icon {
         margin-left: 25px;
     }
+    .button1 {
+        padding: 20px 30px;
+        margin: 17px 0;
+    }
   }
   @media( (min-width:769px) and (max-width:1200px) ){
     
@@ -598,19 +617,16 @@ svg{
         max-width: 768px;
     }
     nav .container {
-        max-width: 807px;
+        max-width: 768px;
     }
-    .nav-icon {
-        margin-right: 22px;
-    }
-    
     .img {
-        width: 657px;
-        margin-left: 107px;
+        width: 640px;
+        left: 127px;
     }
     .caption {
         width: 513px;
-        margin: 31px -400px;
+        right: 525px;
+        top: 28px;
         padding: 20px 26px 20px 271px;
     }
     .caption h1 {
@@ -622,15 +638,17 @@ svg{
         line-height: 23px;
     }
     .down-arrow {
-        margin: 263px 0 0px 562px;
-        padding: 13px 40px;
+        padding: 10px 35px;
+        left: 555px;
+        top: 260px;
     }
     .box {
         padding: 30px 40px;
-        margin: 278px 0 0 -17px;
-    }  
+        top: 270px;
+        right: 575px;
+    }
     h1 {
-        font-size: 35px;
+        font-size: 40px;
     }
     p {
         font-size: 16px;
@@ -648,7 +666,7 @@ svg{
        grid-template-rows: 6fr 1fr 4fr;
     }
     .benifits-head h1 {
-        width: 345px;
+        width: 400px;
     }
     section.benefits {
         margin-top: 80px;
@@ -668,27 +686,15 @@ svg{
     .process h1 {
         width: 400px;
     }
-    .process-detail {
-        grid-template-rows: 3fr 1fr 2fr 1fr 2fr 1fr 2fr;
-        gap: 10px;
-    }
-    .experience .container .exp-grid {
-        grid-template-columns: 1fr 1fr 1fr;
-        grid-template-rows: 2fr 2fr auto auto 1fr;
-    }
     .review .container {
         margin-top: 100px;
     }
     .review-grid {
-        grid-template-rows: 2fr 3fr 4fr 2fr;
         padding: 20px;
     }
     .review-flex {
         gap: 25px;
         padding-top: 50px;
-    }
-    .btn {
-        margin: 17px 0;
     }
     .btn .line {
         width: 65px;
@@ -696,16 +702,19 @@ svg{
     .experience i {
         margin: 10px 0 0 167px;
     }
-    form {
+    .form {
         width: 740px;
-        margin: 240px 0 0 0;
     }
     .subscribe {
         padding: 10px 30px;
-    margin: 246px 0 0 590px;
     }
     .about .container p {
         width: 500px;
+    }
+    .button1 {
+        padding: 10PX 30px;
+        margin: 17px 0;
+       
     }
 }
 @media( (min-width:1201px) and (max-width:1600px) ){
@@ -728,26 +737,25 @@ svg{
         margin-left: 220px;
     }
     .caption {
-        width: 550px;
-        margin: 85px -400px;
-        padding: 30px 60px 30px 180px;
+        width: 900px;
+        right: 790px;
+        top: 70px;
+        padding: 30px 20px 30px 520px;
     }
-    .down-arrow{
-        margin: 461px 0 0px 850px;
+    .down-arrow {
+        left: 850px;
+        top: 470px;
     }
-    .experience .container .exp-grid {
-        grid-template-columns: 1fr 1fr 1fr;
-        grid-template-rows: 3fr 4fr 2fr 3fr 1fr;
+    .box {
+        top: 455px;
+        right: 870px;
     }
     .about .container h1 {
         flex-basis: 150px;
     }
-    .arrow {
-        margin: 0px 0 0 79px;
-    }
-    form {
+    .form {
         width: 740px;
-        margin: 255px 0 0 0;
+        top: 16px;
     }
     input{
         width: 100%;
@@ -755,7 +763,8 @@ svg{
     }
     .subscribe {
         padding: 10px 55px;
-        margin: 261px 0 0 556px;
+        top: 6px;
+        right: 10px;
     }
     .review-flex1 {
         margin-top: 120px;
@@ -786,18 +795,13 @@ svg{
     }
     .caption {
         width: 900px;
-        margin: 88px -800px;
-        padding: 30px 20px 30px 600px;
+        right: 1000px;
+        top: 70px;
+        padding: 30px 20px 30px 520px;
     }
     .caption p {
         color: white;
         padding-top: 20px;
-    }
-    .down-arrow{
-        margin: 495px 0 0px 1100px;
-    }
-    .box{
-        margin: 495px 0 0 -30px;
     }
     section.benefits {
         margin: 150px 0;
@@ -808,14 +812,8 @@ svg{
     .benifits-head h1 {
         width: 500px;
     }
-    .benefits .container {
-        row-gap: 70px;
-    }
     section.process {
         margin-top: 200px;
-    }
-    .process-detail {
-        grid-template-rows: 3fr 1fr 2fr 1fr 2fr 1fr 2fr;
     }
     .about .container h1 {
         flex-basis: 150px;
@@ -839,20 +837,16 @@ svg{
     .exp-grid h1 {
         width: 400px;
     }
-    .arrow{
-        margin: 9px 0 0 79px;
-    }
-    form {
+    .form {
         width: 740px;
-        margin: 260px 0 0 0;
     }
     .subscribe {
         padding: 10px 55px;
-        margin: 267px 0 0 556px;
     }
     .about .container p {
         width: 500px;
     }
+    
 }
 
 
